# feed-repeat

./: .gitignore  .hlint.yaml  CHANGELOG.md  Main.hs  README.md  SECURITY.md  cabal.project  config.yaml  feed-repeat.cabal  module.nix  nixkell.toml  shell.nix
.github/workflows/: feeds.yml
app/: Main.hs
configs/: Caddyfile.example  apache.conf.example  feed-repeat.service  nginx.conf.example
docs/: CHANGELOG.html  hosting-on-github-pages.html  hosting-on-github-pages.md  index.html  light.css  nix-module-options.html
nix/: default.nix  docker.nix  module-options.nix  module.nix  overlays-static.nix  overlays.nix  packages.nix  release.nix  scripts.nix  sources.json  static-deps.nix  util.nix
scripts/: build-site.sh  push-docker.sh
src/: Lib.hs
src/FeedRepeat/: Lib.hs  Runner.hs  Types.hs
src/FeedRepeat/Lib/: SSRF.hs
src/Lib/: SSRF.hs
test/: Main.hs  SsrfSpec.hs
