cabal-version:      3.4
name:               feed-repeat
version:            0.1.0.0
synopsis:           Repeat entries from RSS/Atom feeds into new feeds
description:
  feed-repeat is a tool that processes RSS and Atom feeds, selecting older entries
  and republishing them as fresh content. It supports intelligent entry selection
  using weighted sampling where older entries have higher probability, optional
  feed caching for resilience, and automatic format conversion.
  .
  The tool is configured via YAML and can be run standalone or integrated into
  NixOS systems via the provided module.

author:             Abhinav Sarkar
maintainer:         Abhinav Sarkar
license:            MIT
license-file:       LICENSE
build-type:         Simple
category:           Web
homepage:           https://code.abhinavsarkar.net/abhin4v/feed-repeat
bug-reports:        https://code.abhinavsarkar.net/abhin4v/feed-repeat/issues
extra-source-files: README.md

common common-config
  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , bytestring
    , directory
    , either
    , extra
    , filepath
    , hashable
    , text                  >=2.0
    , unordered-containers

  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    Strict

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-deriving-typeable
    -Wno-implicit-prelude -Wno-incomplete-uni-patterns
    -Wno-missing-role-annotations -Wno-missed-specialisations
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-exported-signatures -Wno-missing-home-modules
    -Wno-missing-import-lists -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-monomorphism-restriction
    -Wno-name-shadowing -Wno-prepositive-qualified-module -Wno-safe
    -Wno-type-defaults -Wno-unsafe -Wno-unused-packages
    -Wno-missing-kind-signatures -Wno-redundant-bang-patterns

library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , feed
    , http-client
    , mtl
    , network-uri
    , random
    , time
    , uuid

executable feed-repeat
  import:         common-config
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:
    , feed
    , feed-repeat
    , http-client
    , http-conduit
    , http-types
    , mtl
    , optparse-applicative
    , temporary
    , time
    , unix
    , yaml

  ghc-options:    -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  import:         common-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , aeson
    , feed
    , feed-repeat
    , hspec
    , http-client
    , http-conduit
    , http-types
    , mtl
    , optparse-applicative
    , QuickCheck
    , random
    , time
    , uuid
    , yaml
