cabal-version:      3.12
name:               feed-repeat
version:            1.1.0
synopsis:           Repeat entries from RSS/Atom feeds into new feeds
description:
  A Haskell tool that repeats entries from RSS/Atom feeds into new feeds.
  It fetches entries from source feeds, filters them by age, and selects
  a random subset using weighted sampling where older entries have higher priority.
  .
  The tool is configured via YAML and can be run standalone or integrated
  into NixOS systems via the provided module.

author:             Abhinav Sarkar
maintainer:         Abhinav Sarkar
copyright:          2026 Abhinav Sarkar
license:            MIT
license-file:       LICENSE
build-type:         Simple
category:           Web
homepage:           https://github.com/abhin4v/feed-repeat
bug-reports:        https://github.com/abhin4v/feed-repeat/issues
extra-source-files: README.md

common common-config
  build-depends:
    , aeson
    , base                  >=4.18 && <5
    , bytestring
    , directory
    , either
    , extra
    , filepath
    , hashable
    , text                  >=2.0
    , unordered-containers

  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    Strict

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-deriving-typeable
    -Wno-implicit-prelude -Wno-incomplete-uni-patterns
    -Wno-missing-role-annotations -Wno-missed-specialisations
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-exported-signatures -Wno-missing-home-modules
    -Wno-missing-import-lists -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-monomorphism-restriction
    -Wno-name-shadowing -Wno-prepositive-qualified-module -Wno-safe
    -Wno-type-defaults -Wno-unsafe -Wno-unused-packages
    -Wno-missing-kind-signatures -Wno-redundant-bang-patterns

library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    Lib
    Lib.SSRF

  build-depends:
    , feed
    , http-client
    , ip
    , mtl
    , network
    , network-uri
    , random
    , scientific   ^>=0.3.8.0
    , time
    , uuid

executable feed-repeat
  import:         common-config
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  PackageInfo_feed_repeat
  build-depends:
    , crypton
    , feed
    , feed-repeat
    , http-client
    , http-client-tls
    , http-types
    , monad-logger
    , mtl
    , optparse-applicative
    , retry
    , temporary
    , time
    , unix
    , yaml

  ghc-options:    -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  import:         common-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:  SsrfSpec
  build-depends:
    , aeson
    , feed
    , feed-repeat
    , hspec
    , http-client
    , http-conduit
    , http-types
    , mtl
    , optparse-applicative
    , QuickCheck
    , random
    , time
    , uuid
    , yaml
