cabal-version:      3.12
name:               feed-repeat
version:            1.3.0
synopsis:           Repeat entries from RSS/Atom feeds into new feeds
description:
  A Haskell tool that repeats entries from RSS/Atom feeds into new feeds.
  It fetches entries from source feeds, filters them by age, and selects
  a random subset using weighted sampling where older entries have higher priority.
  .
  The tool is configured via YAML and can be run standalone or integrated
  into NixOS systems via the provided module.

author:             Abhinav Sarkar
maintainer:         Abhinav Sarkar
copyright:          2026 Abhinav Sarkar
license:            MIT
license-file:       LICENSE
build-type:         Simple
category:           Web
tested-with:        GHC ==9.10.3 || ==9.12.4 || ==9.14.1
homepage:           https://github.com/abhin4v/feed-repeat
bug-reports:        https://github.com/abhin4v/feed-repeat/issues
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/abhin4v/feed-repeat.git

common common-config
  build-depends:
    , aeson                 >=2.2.4  && <2.3
    , base                  >=4.20   && <5
    , bytestring            >=0.12.2 && <0.13
    , directory             >=1.3.8  && <1.4
    , either                >=5.0.3  && <5.1
    , extra                 >=1.8.1  && <1.9
    , filepath              >=1.5.4  && <1.6
    , hashable              >=1.5.1  && <1.6
    , http-client           >=0.7.19 && <0.8
    , monad-logger          >=0.3.42 && <0.4
    , text                  >=2.1.3  && <2.2
    , time                  >=1.12.2 && <1.16
    , unordered-containers  >=0.2.20 && <0.3

  default-language:   GHC2021
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    Strict

  ghc-options:
    -Weverything -Wno-all-missed-specialisations -Wno-deriving-typeable
    -Wno-implicit-prelude -Wno-incomplete-uni-patterns
    -Wno-missing-role-annotations -Wno-missed-specialisations
    -Wno-missing-deriving-strategies -Wno-missing-export-lists
    -Wno-missing-exported-signatures -Wno-missing-home-modules
    -Wno-missing-import-lists -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-monomorphism-restriction
    -Wno-name-shadowing -Wno-prepositive-qualified-module -Wno-safe
    -Wno-type-defaults -Wno-unsafe -Wno-unused-packages
    -Wno-missing-kind-signatures -Wno-redundant-bang-patterns

library
  import:          common-config
  hs-source-dirs:  src
  exposed-modules:
    FeedRepeat.Lib
    FeedRepeat.Lib.SSRF
    FeedRepeat.Runner

  build-depends:
    , crypton      >=1.0.6  && <1.1
    , feed         >=1.3.2  && <1.4
    , http-types   >=0.12.4 && <0.13
    , ip           >=1.7.8  && <1.8
    , mtl          >=2.3.1  && <2.4
    , network      >=3.2.8  && <3.3
    , network-uri  >=2.6.4  && <2.7
    , random       >=1.2.1  && <1.3
    , retry        >=0.9.3  && <0.10
    , scientific   >=0.3.8  && <0.4
    , temporary    >=1.3    && <1.4
    , unix         >=2.8.7  && <2.9
    , uuid         >=1.3.16 && <1.4

executable feed-repeat
  import:          common-config
  main-is:         Main.hs
  hs-source-dirs:  app
  other-modules:   PackageInfo_feed_repeat
  autogen-modules: PackageInfo_feed_repeat
  build-depends:
    , feed                  >=1.3.2   && <1.4
    , feed-repeat
    , http-client-tls       >=0.3.6   && <0.4
    , mtl                   >=2.3.1   && <2.4
    , optparse-applicative  >=0.18.1  && <0.19
    , yaml                  >=0.11.11 && <0.12

  ghc-options:     -funbox-strict-fields -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  import:         common-config
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:  SsrfSpec
  build-depends:
    , aeson                 >=2.2.4   && <2.3
    , feed                  >=1.3.2   && <1.4
    , feed-repeat
    , hspec                 >=2.11.17 && <2.12
    , http-client           >=0.7.19  && <0.8
    , http-conduit          >=2.3.9   && <2.4
    , http-types            >=0.12.4  && <0.13
    , mtl                   >=2.3.1   && <2.4
    , optparse-applicative  >=0.18.1  && <0.19
    , QuickCheck            >=2.15.0  && <2.16
    , random                >=1.2.1   && <1.3
    , uuid                  >=1.3.16  && <1.4
    , yaml                  >=0.11.11 && <0.12
